--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 *.pt filter=lfs diff=lfs merge=lfs -text
 *.h5 filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
+model.pth filter=lfs diff=lfs merge=lfs -text
